# ateshi

./: Cargo.toml  README.md
doc/: demo.tape
src/: main.rs  util.rs
src/widget/: crab.rs  hint.rs  track.rs
