[package]
name = "ateshi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
tinyvec = "1.8.0"
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
