[package]
name = "ateshi"
version = "0.1.0"
edition = "2021"
authors = ["CK Aznable"]
description = " ateshi is a Command Line Interface (CLI) tool designed to mimic the functionality of UFO Test. "
homepage = "https://github.com/ckaznable/ateshi"
repository = "https://github.com/ckaznable/ateshi"
keywords = ["tui", "ufo-test"]
exclude = [".github/"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.87"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
futures = "0.3.30"
ratatui = "0.28.1"
tokio = { version = "1.40.0", features = ["full"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'
